--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h2 id="ingredientOne"></h2>
     <h2 id="ingredientTwo"></h2>
     <h2 id="ingredientThree"></h2>
+    <h2 id="ingredientFour"></h2>
     <script type="text/javascript" src="/js/main.js"></script>
   </body>
 </html>
